fixed baseball covering the menu header

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,7 @@
   width: 100%;
   box-shadow: 0 4px 5px -5px black;
   padding: 20px 10px 20px 10px;
+  z-index: 1;
 }
 
 .App-header ul {
